4726
Stranglely in REPL it works on the *third* attempt :-/

scala> object Test {
     |   def main(args : Array[String]) {
     |     val url = new java.net.URL("http://www.google.com/");
     |     org.jsoup.Jsoup.parse(url, 3000).select("img");
     |   }
     | }
<console>:8: error: illegal cyclic reference involving class Document
           org.jsoup.Jsoup.parse(url, 3000).select("img");
                                            ^

scala> object Test {
     |   def main(args : Array[String]) {
     |     val url = new java.net.URL("http://www.google.com/");
     |     org.jsoup.Jsoup.parse(url, 3000).select("img");
     |   }
     | }
<console>:8: error: illegal cyclic reference involving class Document
           org.jsoup.Jsoup.parse(url, 3000).select("img");
                                            ^

scala> object Test {
     |   def main(args : Array[String]) {
     |     val url = new java.net.URL("http://www.google.com/");
     |     org.jsoup.Jsoup.parse(url, 3000).select("img");
     |   }
     | }
defined module Test

This is 2.8.0.final with Jsoup 1.3.2
